Slight spacing fix for session options (EDDBOOK-58)
EDDBOOK-58 #time 5m

--- a/assets/css/eddbk/widget/session-picker.css
+++ b/assets/css/eddbk/widget/session-picker.css
@@ -7,6 +7,7 @@ div.edd-bk-session-picker {
 div.edd-bk-session-picker div.edd-bk-session-options {
     display: block;
     display: none;
+    margin-bottom: 15px;
 }
 
 /* Loading label and icon */
